# pico2w-homelab-closet-fan

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
src/: main.rs
